Moved text around and added bit entry

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -34,3 +34,13 @@
   title = {Simulated annealing algorithms: an overview},
   journal = {{IEEE} Circuits and Devices Magazine},
 }
+
+@BOOK{Gendreau2018-pw,
+  title = "Handbook of Metaheuristics",
+  editor = "Gendreau, Michel and Potvin, Jean-Yves",
+  publisher = "Springer International Publishing",
+  series = "Internationalseries in operation research \& management science",
+  edition = 3,
+  month = oct,
+  language = "en",
+}
