More description and references in paper. Makefile updated pandoc command

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -36,11 +36,21 @@
 }
 
 @BOOK{Gendreau2018-pw,
-  title = "Handbook of Metaheuristics",
-  editor = "Gendreau, Michel and Potvin, Jean-Yves",
-  publisher = "Springer International Publishing",
-  series = "Internationalseries in operation research \& management science",
-  edition = 3,
-  month = oct,
-  language = "en",
+  title = {Handbook of Metaheuristics},
+  editor = {Gendreau, Michel and Potvin, Jean-Yves},
+  publisher = {Springer International Publishing},
+  series = {Internationalseries in operation research \& management science},
+  edition = {3},
+  month = {oct},
+  language = {en},
+}
+
+@book{Keller_2019,
+  doi = {10.2174/97816810870541190101},
+  url = {https://doi.org/10.2174%2F97816810870541190101},
+  year = {2019},
+  month = {mar},
+  publisher = {{BENTHAM} {SCIENCE} {PUBLISHERS}},
+  author = {Andre A. Keller},
+  title = {Multi-Objective Optimization In Theory and Practice {II}: Metaheuristic Algorithms},
 }
