--- a/docs/main.bib
+++ b/docs/main.bib
@@ -54,3 +54,9 @@
   author = {Andre A. Keller},
   title = {Multi-Objective Optimization In Theory and Practice {II}: Metaheuristic Algorithms},
 }
+
+@misc{tutorials_point,
+    title={Find if two rectangles overlap using C++.},
+    url={https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
+    journal={Tutorials Point}
+} 
