First attempt at algorithms

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -56,7 +56,15 @@
 }
 
 @misc{tutorials_point,
-    title={Find if two rectangles overlap using C++.},
-    url={https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
-    journal={Tutorials Point}
+  title={Find if two rectangles overlap using C++.},
+  url={https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
+  journal={Tutorials Point}
 } 
+
+@misc{enwiki:continous-uniform-distribution,
+  author = "{Wikipedia contributors}",
+  title = "Continuous uniform distribution --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
+  note = "[Online; accessed 29-July-2022"]
+}
