--- a/docs/main.bib
+++ b/docs/main.bib
@@ -66,5 +66,5 @@
   title = "Continuous uniform distribution --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2022",
   url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
-  note = "[Online; accessed 29-July-2022"]
+  note = "[Online; accessed 29-July-2022]"
 }
