--- a/docs/main.bib
+++ b/docs/main.bib
@@ -5,7 +5,7 @@
   pages = {287--319},
   author = {Darrall Henderson and Sheldon H. Jacobson and Alan W. Johnson},
   title = {The Theory and Practice of Simulated Annealing},
-  booktitle = {International Series in Operations Research {\&}amp$\mathsemicolon$ Management Science},
+  booktitle = {International Series in Operations Research {\&}amp: Management Science},
 }
 
 @article{Bertsimas_1993,
@@ -59,7 +59,7 @@
   title={Find if two rectangles overlap using C++.},
   url={https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
   journal={Tutorials Point}
-} 
+}
 
 @misc{enwiki:continous-uniform-distribution,
   author = "{Wikipedia contributors}",
